fix: Heading in book 4 for colour contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5{
 }
 .book-4, .link-4{
     background-color: #EE1530;
-    color: #2862dd;
+    color: #102657;
     border: 2px solid #3C9BC0;
 }
 .book-5, .link-5{
